--- a/pom.xml
+++ b/pom.xml
@@ -225,11 +225,11 @@
 			<artifactId>lucene-highlighter</artifactId>
 			<version>3.6.0</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.wltea.analyzer</groupId>
 			<artifactId>IKAnalyzer</artifactId>
 			<version>2012_u5</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.apache.mahout</groupId>
 			<artifactId>mahout-core</artifactId>
@@ -237,6 +237,11 @@
 		<dependency>
 			<groupId>org.apache.mahout</groupId>
 			<artifactId>mahout-math</artifactId>
+		</dependency>
+		<dependency>
+		   <groupId>javax.mail</groupId>
+		   <artifactId>mail</artifactId>
+		   <version>1.4.4</version>
 		</dependency>
 		<!-- <dependency>
 			<groupId>org.apache.mahout</groupId>
@@ -306,7 +311,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
@@ -324,7 +329,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-install-plugin</artifactId>
